--- a/app/css/app.css
+++ b/app/css/app.css
@@ -1,23 +1,30 @@
+/* 共通css */
 body {
     margin: 0;
     padding: 0;
+}
+
+main{
+    padding: 20px;
 }
 
 * {
     box-sizing: border-box;
 }
 
-
+/* ulタグスタイル削除 */
 ul {
     list-style: none;
 }
 
+/* aタグリセットcss */
 .a_reset_css {
     text-decoration: none;
     color: inherit;
 
 }
 
+/* buttonリセットcss */
 .btn_reset_css {
     background: none;
 	border: none;
@@ -29,14 +36,40 @@ ul {
     font-size: 1.05rem;
 }
 
-
+/* ヘッダー */
 header {
     background-color: rgb(165, 165, 165);
     height: 7vh;
     width: 100vw;
     position: relative;
+    display: flex;
 }
 
+/* 検索バー */
+.search_bar_layout {
+    width: 55vw;
+    height: 7vh;
+    position: absolute;
+    left: 0;
+    top: 0;
+    margin: 0;
+    padding-left: 10vw;
+    display: flex;
+    align-items: center;
+    flex-direction: row-reverse;
+    flex-wrap: nowrap;
+}
+
+.search_bar {
+    width: 25vw;
+}
+
+.search_bar .keyword_bar {
+    width: 15vw;
+    height: 24px;
+}
+
+/* ヘッダーのナビゲーション */
 .nav {
     margin: 0;
     padding-right: 20px;
@@ -52,16 +85,58 @@ header {
     gap: 0 30px ;
 }
 
+/* 処理成功時 */
 .success {
     color: green;
 }
 
+/* 処理失敗時 */
 .fail {
     color: red;
 }
 
+/* 太文字 */
 .bold {
     font-weight: bold;
     font-size: 1.5rem;
 }
 
+/* ホームのブログ全件表示レイアウト */
+.article a {
+    width: 50vw;
+    margin: 7px;
+    display: flex;
+    justify-content: space-between;
+    text-align: center;
+    line-height: 2;
+}
+
+/* ホームのブログ1件の表示レイアウト */
+.article a div {
+    text-align: left;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+
+}
+
+.article a div:nth-child(1) {
+    width: 20%;
+}
+.article a div:nth-child(2) {
+    width: 30%;
+}
+.article a div:nth-child(3) {
+    width: 15%;
+}
+.article a div:nth-child(4) {
+    width: 20%;
+}
+
+/* ブログコンテンツの書き込みボックス */
+.contents-box {
+    width: 75vw;
+    border: 1px solid black;
+    border-radius: 5px;
+    padding: 20px;
+}
